--- a/src/app/magazzino/lista-magazzino/lista-magazzino.component.html
+++ b/src/app/magazzino/lista-magazzino/lista-magazzino.component.html
@@ -26,7 +26,7 @@
               <td>
               </td>
               <td>
-                <a [routerLink]="['/products', datoMagazzino.idMerce]">
+                <a [routerLink]="['/warehouse', datoMagazzino.idMerce]">
                   {{ datoMagazzino.nomeProdotto }}
                 </a>
               </td>
