--- a/src/app/magazzino/magazzino-dettagli/magazzino-dettagli.component.html
+++ b/src/app/magazzino/magazzino-dettagli/magazzino-dettagli.component.html
@@ -12,7 +12,7 @@
           </div>
           <div class='row'>
             <div class='col-md-4'>Materiale:</div>
-            <div class='col-md-8'>{{datoMagazzino.materiale}}</div>
+            <div class='col-md-8'>{{datoMagazzino.materiale | uppercase | convertToSpaces: ' ': '-'}}</div>
           </div>
           <div class='row'>
             <div class='col-md-4'>Imballaggio:</div>
