--- a/src/app/magazzino/lista-magazzino/lista-magazzino.component.html
+++ b/src/app/magazzino/lista-magazzino/lista-magazzino.component.html
@@ -6,8 +6,13 @@
       <div class='row'>
         <div class='col-md-2'>Filter by:</div>
         <div class='col-md-4'>
-          <input type='text' />
+          <input type='text' [(ngModel)]='listFilter' />
         </div>
+      </div>
+      <div class='row' *ngIf='listFilter'>
+          <div class='col-md-6'>
+            <h4>Filtered by: {{listFilter}}</h4>
+          </div>
       </div>
       <div class='table-responsive'>
         <table class='table'>
@@ -22,7 +27,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor='let datoMagazzino of datiMagazzino'>
+            <tr *ngFor='let datoMagazzino of datiMagazzinoFiltrati'>
               <td>
               </td>
               <td>
