--- a/src/app/magazzino/lista-magazzino/lista-magazzino.component.html
+++ b/src/app/magazzino/lista-magazzino/lista-magazzino.component.html
@@ -38,6 +38,7 @@
               <td>{{ datoMagazzino.quantita }}</td>
               <td>{{ datoMagazzino.capannone }}</td>
               <td>{{ datoMagazzino.scaffale }}</td>
+              <!-- <td>{{ datoMagazzino.scaffale | uppercase | convertNumber: '-'}}</td> -->
             </tr>
           </tbody>
         </table>
