--- a/src/app/magazzino/magazzino-dettagli/magazzino-dettagli.component.html
+++ b/src/app/magazzino/magazzino-dettagli/magazzino-dettagli.component.html
@@ -22,11 +22,11 @@
       </div>
     </div>
   
-    <!-- <div class='card-footer'>
+    <div class='card-footer'>
       <button class='btn btn-outline-secondary'
               style='width:80px'
               (click)='onBack()'>
         <i class='fa fa-chevron-left'></i> Back
       </button>
-    </div> -->
+    </div>
   </div>
