--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -40,6 +40,9 @@
             <td>{{ product.productCode }}</td>
             <td>{{ product.releaseDate }}</td>
             <td>{{ product.price }}</td>
+            <td>
+              <app-star [rating]="product.starRating" (ratingClicked)="onRatingClicked($event)"></app-star>
+            </td>
           </tr>
         </tbody>
       </table>
