aggiunta la form per inserire un cliente, esempio come usare template driven per la gestione della form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <nav class='navbar navbar-expand navbar-dark bg-dark'>
   <img src="../assets/images/logo.nav.png" alt="">
   <ul class='nav nav-pills'>
-    <li><a class='nav-link' routerLink='/welcome'>Home</a></li>
-    <li><a class='nav-link' routerLink='/products'>Product List</a></li>
-    <li><a class='nav-link' routerLink='/warehouse'>Warehouse</a></li>
+    <li><a class='nav-link' routerLinkActive='active' routerLink='/welcome'>Home</a></li>
+    <li><a class='nav-link' routerLinkActive='active' routerLink='/products'>Product List</a></li>
+    <li><a class='nav-link' routerLinkActive='active' routerLink='/warehouse'>Warehouse</a></li>
+    <li><a class='nav-link' routerLinkActive='active' routerLink='/customer'>Customer</a></li>
   </ul>
 </nav>
 <div class='container mt-5'>
