--- a/src/app/home/customer/customer.component.html
+++ b/src/app/home/customer/customer.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="card-body">
-    <form (ngSubmit)="save()">
+    <form #customerForm="ngForm" (ngSubmit)="save()">
 
       <div class="form-group row mb-2">
         <label class="col-md-2 col-form-label"
@@ -32,7 +32,13 @@
         <div class="col-md-8">
           <input class="form-control"
                  id="lastNameId"
+                 name="lastName"
                  type="text"
+                 required
+                 minlength="3"
+                 [(ngModel)]="customer.lastName"
+                 #lastNameVar="ngModel"
+                 [ngClass]="{'is-invalid': lastNameVar.touched && !lastNameVar.valid }"
                  placeholder="Last Name (required)"/>
           <span class="invalid-feedback">
           </span>
@@ -46,7 +52,14 @@
           <div class="col-md-8">
             <input class="form-control"
                    id="emailId"
+                   name="email"
                    type="email"
+                   maxlength="25"
+                   required
+                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                   [(ngModel)]="customer.email"
+                   #emailVar="ngModel"
+                   [ngClass]="{'is-invalid': emailVar.touched && !emailVar.valid }"
                    placeholder="Email (required)"/>
             <span class="invalid-feedback">
             </span>
@@ -88,16 +101,24 @@
         <div class="col-md-8">
           <div class="form-check form-check-inline">
             <label class="form-check-label">
-              <input class="form-check-input"
+              <input name="notificationType"
+                     class="form-check-input"
                      type="radio"
-                     value="email">Email
+                     value="email"
+                     [(ngModel)]="customer.sendNotification"
+                     required
+                     >Email
             </label>
           </div>
           <div class="form-check form-check-inline">
             <label class="form-check-label">
-              <input class="form-check-input"
+              <input name="notificationType"
+                     class="form-check-input"
                      type="radio"
-                     value="text">Text
+                     value="text"
+                     [(ngModel)]="customer.sendNotification"
+                     required
+                     >Text
             </label>
           </div>
         </div>
@@ -110,6 +131,12 @@
           <input class="form-control"
                  id="ratingId"
                  type="number"
+                 min="1"
+                 max="10"
+                 name="rating"
+                 [(ngModel)]="customer.rating"
+                 #ratingVar="ngModel"
+                 [ngClass]="{'is-invalid': ratingVar.touched && !ratingVar.valid }"
                  />
           <span class="invalid-feedback">
           </span>
@@ -128,7 +155,7 @@
         </div>
       </div>
 
-      <div >
+      <!-- <div >
         <div formArrayName="addresses">
 
         </div>
@@ -142,21 +169,22 @@
             </button>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="form-group row mb-2">
         <div class="col-md-4">
           <button class="btn btn-primary mr-3"
                   type="submit"
                   style="width:80px"
+                  [disabled]="customerForm.invalid"
                   >
             Save
           </button>
-          <button class="btn btn-outline-secondary"
+          <!-- <button class="btn btn-outline-secondary"
                   type="button"
                  >
             Test Data
-          </button>
+          </button> -->
         </div>
       </div>
     </form>
