--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <li><a class='nav-link' routerLinkActive='active' routerLink='/welcome'>Home</a></li>
     <li><a class='nav-link' routerLinkActive='active' routerLink='/products'>Product List</a></li>
     <li><a class='nav-link' routerLinkActive='active' routerLink='/warehouse'>Warehouse</a></li>
+    <li><a class='nav-link' routerLinkActive='active' routerLink='/newProduct'>New Product</a></li>
     <li><a class='nav-link' routerLinkActive='active' routerLink='/customer'>New Customer</a></li>
   </ul>
 </nav>
