esempio di una reactive form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <li><a class='nav-link' routerLinkActive='active' routerLink='/warehouse'>Warehouse</a></li>
     <li><a class='nav-link' routerLinkActive='active' routerLink='/newProduct'>New Product</a></li>
     <li><a class='nav-link' routerLinkActive='active' routerLink='/customer'>New Customer</a></li>
+    <li><a class='nav-link' routerLinkActive='active' routerLink='/customer-reactive'>New Customer (reactive)</a></li>
   </ul>
 </nav>
 <div class='container mt-5'>
