--- a/src/app/home/new-customer-reactive/new-customer-reactive.component.html
+++ b/src/app/home/new-customer-reactive/new-customer-reactive.component.html
@@ -16,6 +16,9 @@
                  type="text"
                  placeholder="First Name (required)"
                  formControlName="firstName"
+                 [ngClass]="{'is-invalid': (customerForm.get('firstName').touched ||
+                                            customerForm.get('firstName').dirty) &&
+                                            !customerForm.get('firstName').valid }"
                  />
           <span class="invalid-feedback">
           </span>
@@ -31,7 +34,10 @@
                  name="lastName"
                  type="text"
                  placeholder="Last Name (required)"
-                 formControlName="lastName"/>
+                 formControlName="lastName"
+                 [ngClass]="{'is-invalid': (customerForm.get('lastName').touched ||
+                                            customerForm.get('lastName').dirty) &&
+                                            !customerForm.get('lastName').valid }"/>
           <span class="invalid-feedback">
           </span>
         </div>
@@ -142,6 +148,127 @@
         </div>
       </div>
 
+      <div *ngIf="customerForm.get('sendCatalog').value">
+        <div formArrayName="addresses">
+          <div [formGroupName]="i"
+               *ngFor="let address of addresses.controls; let i=index">
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label pt-0">Address Type</label>
+              <div class="col-md-8">
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input"
+                           id="addressType1Id"
+                           type="radio"
+                           value="home"
+                           formControlName="addressType"> Home
+                  </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input"
+                           id="addressType1Id"
+                           type="radio"
+                           value="work"
+                           formControlName="addressType"> Work
+                  </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">
+                    <input class="form-check-input"
+                           id="addressType1Id"
+                           type="radio"
+                           value="other"
+                           formControlName="addressType"> Other
+                  </label>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label"
+                     attr.for="{{'street1Id' + i}}">Street Address 1</label>
+              <div class="col-md-8">
+                <input class="form-control"
+                       id="{{ 'street1Id' + i }}"
+                       type="text"
+                       placeholder="Street address (required)"
+                       formControlName="street1"
+                       [ngClass]="{'is-invalid': (address.get('street1').touched || 
+                                                  address.get('street1').dirty) && 
+                                                  !address.get('street1').valid }">
+                <span class="invalid-feedback">
+                  <span *ngIf="address.get('street1').errors?.['required']">
+                    Please enter your street address.
+                  </span>
+                </span>
+              </div>
+            </div>
+
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label"
+                     attr.for="{{'street2Id' + i}}">Street Address 2</label>
+              <div class="col-md-8">
+                <input class="form-control"
+                       id="{{'street2Id' + i}}"
+                       type="text"
+                       placeholder="Street address (second line)"
+                       formControlName="street2">
+              </div>
+            </div>
+
+            <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label"
+                     attr.for="{{'cityId' + i}}">City, State, Zip Code</label>
+              <div class="col-md-3">
+                <input class="form-control"
+                       id="{{'cityId' + i}}"
+                       type="text"
+                       placeholder="City"
+                       formControlName="city">
+              </div>
+              <div class="col-md-3">
+                <select class="form-control"
+                        id="{{'stateId' + i}}"
+                        formControlName="state">
+                  <option value=""
+                          disabled
+                          selected
+                          hidden>Select a State...</option>
+                  <option value="AL">Alabama</option>
+                  <option value="AK">Alaska</option>
+                  <option value="AZ">Arizona</option>
+                  <option value="AR">Arkansas</option>
+                  <option value="CA">California</option>
+                  <option value="CO">Colorado</option>
+                  <option value="WI">Wisconsin</option>
+                  <option value="WY">Wyoming</option>
+                </select>
+              </div>
+              <div class="col-md-2">
+                <input class="form-control"
+                       id="{{'zipId' + i}}"
+                       type="number"
+                       placeholder="Zip Code"
+                       formControlName="zip">
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group row mb-2">
+          <div class="col-md-4">
+            <button class="btn btn-outline-primary"
+                    type="button"
+                    [title]="addresses.valid ? 'Add another mailing address' : 'Disabled until the existing address data is valid'"
+                    [disabled]="!addresses.valid"
+                    (click)="addAddress()">
+              Add Another Address
+            </button>
+          </div>
+        </div>
+      </div>
+
       <div class="form-group row mb-2">
         <div class="col-md-4">
           <button class="btn btn-primary mr-3"
@@ -150,6 +277,11 @@
                   [disabled]="!customerForm.valid"
                   >
             Save
+          </button>
+          <button class="btn btn-outline-secondary"
+                  type="button"
+                  (click)="populateTestData()">
+            Test Data
           </button>
         </div>
       </div>
